--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Node 1 - Afternoon",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "api": "nodemon server/index.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3000/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/devlemire/node-chat.git"
@@ -21,6 +24,13 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "express-session": "^1.15.3"
+    "express-session": "^1.15.3",
+    "axios": "^0.16.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-icons": "^2.2.5"
+  },
+  "devDependencies": {
+    "react-scripts": "1.0.7"
   }
 }
