--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "node-chat",
+  "name": "node-3-mini",
   "version": "1.0.0",
-  "description": "Node 1 - Afternoon",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
