--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
-yarn.lock
-.DS_Store
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 
 # testing
 /coverage
